<resources>
    <string name="app_name">LookUp</string>
    <string name="empty">-</string>
    <string name="show_more">Show More</string>
    <string name="background_alt">background</string>
    <string name="search_hint">Search for Location</string>
    <string name="search">Search</string>
    <string name="no_locations">No locations saved :(</string>
    <string name="no_network">No network connection :(</string>
    <string name="local_time">Local Time</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="icon_desc">icon</string>
    <string name="uv">UV Level</string>
</resources>